--- a/src/main/webapp/WEB-INF/template/login.html
+++ b/src/main/webapp/WEB-INF/template/login.html
@@ -1,36 +1,68 @@
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml"
-      th:include="layout :: page">
+      xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>store</title>
+  <link rel="stylesheet" th:href="@{../../static/css/style.css}">
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+</head>
 
 <body>
-<div th:fragment="login">
-  <div class="container">
+<div class="container">
 
-    <div class="col-lg-4">
-      <form class="form-signin" th:action="@{/login}" method="post">
-        <h2 class="form-signin-heading">Please sign in</h2>
+  <div class="page-wrap d-flex flex-row align-items-center">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
 
-        <p th:if="${param.error}" class="error">Invalid user, password, or domain</p>
-        <p>
-          <label th:text="#{label_login}" for="username" class="sr-only">Username</label>
-          <input type="text" id="username" name="username" class="form-control"
-                 th:placeholder="#{label_login}" required autofocus/>
-        </p>
+          <div>
+            <form class="form-signin" th:action="@{/login}" method="post">
+              <h2 class="form-signin-heading">Please sign in</h2>
 
-        <p>
-          <label th:text="#{label_password}" for="password" class="sr-only">Password</label>
-          <input type="password" id="password" name="password" class="form-control"
-                 th:placeholder="#{label_password}" required autofocus/>
-        </p>
-        <button th:text="#{label_sing_in}" class="btn btn-lg btn-primary btn-block" type="submit">
-          Sign
-          in
-        </button>
-        <br/>
-        <p><a href="/" th:href="@{/}">Back to home page</a></p>
-      </form>
+              <p th:if="${param.error}" class="error" th:text="#{label_error}"></p>
+              <p>
+                <label th:text="#{label_username}" for="username" class="sr-only">Username</label>
+                <input type="text" id="username" name="username" class="form-control"
+                       th:placeholder="#{label_username}" required autofocus/>
+              </p>
+
+              <p>
+                <label th:text="#{label_password}" for="password" class="sr-only">Password</label>
+                <input type="password" id="password" name="password" class="form-control"
+                       th:placeholder="#{label_password}" required autofocus/>
+              </p>
+              <button th:text="#{label_sing_in}" class="btn btn-lg btn-primary btn-block"
+                      type="submit">
+                Sign in
+              </button>
+              <br/>
+              <p><a href="/" th:href="@{/}">Back to home page</a></p>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+          integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+          crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+          integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+          crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+          crossorigin="anonymous"></script>
+
+
 </body>
 </html>
