--- a/src/main/webapp/WEB-INF/template/layout.html
+++ b/src/main/webapp/WEB-INF/template/layout.html
@@ -3,16 +3,9 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       xmlns="http://www.w3.org/1999/xhtml"
       th:fragment="page">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>store</title>
-  <link rel="stylesheet" th:href="@{../../static/css/style.css}">
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
-</head>
+
+<div th:replace="~{header::head}"></div>
+
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -96,33 +89,16 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-lg-1"></div>
-  <div sec:authorize="hasRole('ADMIN')" class="col-lg-6" th:insert="~{this::admin}"></div>
-  <div sec:authorize="hasRole('USER')" class="col-lg-6" th:insert="~{user :: content}"></div>
-  <div sec:authorize="isAnonymous()" class="col-lg-6" th:include="~{login :: login}"></div>
-</div>
-<div class="col-lg-3">
-  <div th:include="~{topic::topic}"></div>
-</div>
+<div class="container">
+  <div class="row">
+    <div sec:authorize="hasRole('ADMIN')" class="col-lg-7 mr-3" th:insert="~{this::admin}"></div>
+    <div sec:authorize="hasRole('USER')" class="col-lg-7  mr-3"
+         th:insert="~{user :: content}"></div>
+    <div class="col-lg-4" th:insert="~{topic::topic}"></div>
+  </div>
 
 </div>
 
-
-<footer>© 2018-2019</footer>
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-
+<div th:replace="~{footer}"></div>
 </body>
 </html>
