--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -15,7 +15,6 @@ body {
 
 footer {
   background-color: #333;
-  height: 10vh;
   color: #fff;
   padding: 0;
   text-align: center;
@@ -24,4 +23,18 @@ footer {
   width: 100%;
   height: 100px;
   line-height: 100px;
+}
+
+#body {
+  width: 1200px;
+}
+
+#scrol {
+  overflow: scroll;
+  height: 400px;
+  min-height: 200px;
+}
+
+html {
+  height: 100%;
 }
