--- a/src/main/webapp/WEB-INF/template/layout.html
+++ b/src/main/webapp/WEB-INF/template/layout.html
@@ -2,13 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       xmlns="http://www.w3.org/1999/xhtml"
+      lang="us"
       th:fragment="page">
 
 <div th:replace="~{header::head}"></div>
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark ">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
           aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,23 +24,19 @@
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/user?lang=ru}">Russia <span class="sr-only">(current)</span></a>
       </li>
-
     </ul>
-
-
     <div sec:authorize="isAuthenticated()" class="col-md-3 text-right">
-      <span sec:authentication="name"></span>
-      <h1><a th:href="@{/logout}">log out</a></h1>
+      <h1><a th:href="@{/logout}"><span class="nav-link" sec:authentication="name"></span></a></h1>
     </div>
-    <form sec:authorize="isAnonymous()" class="form-inline my-2 my-lg-0">
-      <button th:text="#{label_login}" class="btn btn-secondary my-2 my-sm-0" type="button"
-              data-toggle="modal"
-              data-target="#loginModal">Login
-      </button>
-    </form>
   </div>
 </nav>
 
+<form sec:authorize="isAnonymous()" class="form-inline my-2 my-lg-0">
+  <button class="btn btn-secondary my-2 my-sm-0" type="button"
+          data-toggle="modal"
+          data-target="#loginModal">
+  </button>
+</form>
 
 <div class="modal" id="loginModal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
