--- a/src/main/webapp/WEB-INF/template/user.html
+++ b/src/main/webapp/WEB-INF/template/user.html
@@ -86,7 +86,7 @@
         <td th:text="${trade.type}"></td>
         <td th:text="${trade.quantity}"></td>
         <td th:text="${#numbers.formatDecimal(trade.amount,1,2)}"></td>
-        <td th:text="${#dates.format(#dates.createNow(), 'dd MM yyyy HH:mm')}">create date
+        <td th:text="${{trade.dateTime}}">create date
         </td>
         <td th:if="${trade.active}" th:text="#{label_deal_active}">
         <td th:unless="${trade.active}" th:text="#{label_deal_closed}">
