--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -5,12 +5,13 @@
   font-size: 30px;
 }
 
-body {
-  background: aqua;
-}
-
 .page-wrap {
   min-height: 100vh;
+}
+nav{
+  background-color: #333;
+  height: 60px;
+  line-height: 60px;
 }
 
 footer {
@@ -21,8 +22,8 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 100px;
-  line-height: 100px;
+  height: 60px;
+  line-height: 60px;
 }
 
 #body {
