--- a/src/main/webapp/WEB-INF/template/login.html
+++ b/src/main/webapp/WEB-INF/template/login.html
@@ -43,40 +43,43 @@
               <br/>
               <p><a href="/" th:href="@{/}">Back to home page</a></p>
             </form>
+            <br/>
+            <div class="dropdown">
+              <button th:text="#{label_language}" type="button"
+                      class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" th:href="@{/?lang=ru}"
+                   th:text="#{label_language_ru}">Russian</a>
+                <a class="dropdown-item" th:href="@{?lang=en}"
+                   th:text="#{label_language_us}">English</a>
+              </div>
+            </div>
+
+
           </div>
+
         </div>
       </div>
     </div>
-
-    <div class="dropdown">
-      <button th:text="#{label_language}" type="button"
-              class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-
-      </button>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" th:href="@{/?lang=ru}"
-           th:text="#{label_language_ru}">Russian</a>
-        <a class="dropdown-item" th:href="@{?lang=us}"
-           th:text="#{label_language_us}">English</a>
-      </div>
-    </div>
-
-
   </div>
 
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+</div>
 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-          integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-          crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-          integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-          crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-          crossorigin="anonymous"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 
 </body>
