--- a/src/main/webapp/WEB-INF/template/user.html
+++ b/src/main/webapp/WEB-INF/template/user.html
@@ -7,7 +7,7 @@
 <body>
 <div th:fragment="content">
 
-  <button sec:authorize="hasRole('USER')" type="button" class="btn btn-primary"
+  <button sec:authorize="hasRole('USER')" type="button" class="btn btn-primary m-4"
           data-toggle="modal" data-target="#exampleModal"
           data-whatever="@mdo">Add trade
   </button>
