--- a/src/main/webapp/WEB-INF/template/admin.html
+++ b/src/main/webapp/WEB-INF/template/admin.html
@@ -5,8 +5,8 @@
 
 <body>
 <div th:fragment="admin">
-
-
+  <br/>
+  <button class="btn-primary" type="button" ><a th:href="@{/admin/create}" >create</a></button>
 
   <div th:if="${message}" class="alert alert-success" role="alert">
     <h1 th:text="${message}">delete success</h1>
