--- a/src/main/webapp/WEB-INF/template/footer.html
+++ b/src/main/webapp/WEB-INF/template/footer.html
@@ -6,7 +6,7 @@
 <div th:fragment="footer">
   <footer>© 2018-2019</footer>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
