--- a/src/main/webapp/WEB-INF/template/layout.html
+++ b/src/main/webapp/WEB-INF/template/layout.html
@@ -31,9 +31,14 @@
           <span
               class="sr-only">(current)</span></a>
       </li>
-    </ul>
-    <div sec:authorize="isAuthenticated()" class="col-md-3 text-right">
-      <h1><a th:href="@{/logout}"><span class="nav-link" sec:authentication="name"></span></a></h1>
+    </ul >
+    <div sec:authorize="isAuthenticated()" >
+      <ul class="col-md-3 text-right">
+        <li class="nav-item active">
+          <a class="nav-link" sec:authentication="name" th:href="@{/logout}"></a>
+
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
